--- a/Jupiter的副本/WebContent/styles/main.css
+++ b/Jupiter的副本/WebContent/styles/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
 	box-sizing: border-box;
 	margin: 0;
@@ -77,7 +76,7 @@ ul {
 .container>header {
 	align-items: center;
 	background:
-		url('http://prophoto.com.cy/wp-content/galleries/food/food-restaurant-photographer-cyprus-10.jpg')
+		url('http://folkartcarsi.com/img/4.jpg')
 		no-repeat 50% 50%;
 	background-size: 100%;
 	display: flex;
